test/param/loop/paramForLoopWrongCountType.good
paramForLoopWrongCountType.chpl:1: error: in a param for-loop, the count operator requires a param integral value
